<resources>
    <string name="app_name">HealthierLifestyle</string>
    <string name="welcome_to_healthier_lifestyle">Welcome to healthier lifestyle!</string>
    <string name="register">REGISTER</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="healthier_lifestyle">Healthier Lifestyle</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="trainings_per_week">Trainings per week</string>
    <string name="foods">foods</string>
    <string name="menu">menus</string>
    <string name="show_all_foods">SHOW ALL FOODS</string>
    <string name="show_foods_rich_on_protein">SHOW FOODS RICH ON PROTEIN</string>
    <string name="show_foods_rich_on_carbohydrates">SHOW FOODS RICH ON CARBOHYDRATES</string>
    <string name="show_foods_rich_on_fats">SHOW FOODS RICH ON FATS</string>
    <string name="show_foods_rich_on_calories">SHOW FOODS RICH ON CALORIES</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="logout">Log out</string>
    <string name="proteins">Proteins</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fats">Fats</string>
    <string name="calories">Calories</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome_user">Welcome</string>
    <string name="update_user_information">Update user information</string>
    <string name="proteins_per_day">Proteins per day:</string>
    <string name="carbohydrates_per_day">carbohydrates per day</string>
    <string name="fats_per_day">fats per day</string>
    <string name="calories_per_day">calories per day</string>
    <string name="zero">0</string>
    <string name="reset">Reset</string>
    <string name="wanted">Wanted</string>
    <string name="unwanted">unwanted</string>
    <string name="wanted_foods">wanted foods</string>
    <string name="unwanted_foods">unwanted foods</string>
    <string name="calculator_mode">Calculator Mode</string>
    <string name="add_to_wanted_foods">Add to wanted foods</string>
    <string name="add_to_unwanted_foods">Add to unwanted foods</string>
    <string name="remove">Remove</string>
    <string name="sum">Sum</string>


    <string-array name="Foods_names">
        <item>Orange</item>
        <item>Chicken Breasts</item>
        <item>Apple</item>
        <item>Rice</item>
        <item>Egg</item>
    </string-array>

    <array name="foods_pics">
        <item>@drawable/apple</item>
        <item>@drawable/chickenbreasts</item>
        <item>@drawable/orange</item>
        <item>@drawable/rice</item>
        <item>@drawable/egg</item>
    </array>
</resources>
