<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <TableLayout android:id="@+id/personRegisterTable"
        android:layout_height="wrap_content" android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:ignore="MissingConstraints">
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:id="@+id/nameTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/name"
                />
            <EditText
                android:id="@+id/namePlainText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                />
        </TableRow>
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:id="@+id/passwordTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/password"
                />
            <EditText
                android:id="@+id/passwordPlainText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                />
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:id="@+id/ageTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/age"
              />
            <EditText
                android:id="@+id/agePlainText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="number"
                />
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:id="@+id/genderTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/gender" />
            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:id="@+id/heightTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/height"
                />
            <EditText
                android:id="@+id/heightPlainText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="number"
                />
        </TableRow>
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:id="@+id/weightTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/weight"
                />
            <EditText
                android:id="@+id/weightPlainText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="number"
                />
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:id="@+id/trainsPerWeekTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/trainings_per_week"
                android:paddingEnd="40dp"
                />
            <EditText
                android:id="@+id/trainPerWeekPlainText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="number"
                />
        </TableRow>
        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personRegisterTable" />

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>