<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context=".CalculatorActivity">

    <LinearLayout
        android:id="@+id/foodsListLayout"
        android:layout_width="match_parent" android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="14"
        android:gravity="center"
        android:orientation="horizontal"

        >

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1dp"
            android:divider="@color/colorPrimaryDark"
            android:choiceMode="singleChoice"
            android:listSelector="#666666"
            tools:ignore="MissingConstraints"
            ></ListView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/calculatorLayout"
        android:layout_height="0dp" android:layout_width="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        >
        <TableLayout android:id="@+id/personRegisterTable"
            android:layout_height="wrap_content" android:layout_width="match_parent"
            tools:ignore="MissingConstraints">
            <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
                <Button
                    android:id="@+id/SumButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sum"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/ResetButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset"
                    tools:ignore="ButtonStyle" />
            </TableRow>
            <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/proteins" />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/carbohydrates" />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/fats" />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/calories" />
            </TableRow>

            <TableRow  android:layout_height="match_parent" android:layout_width="match_parent">
                <EditText
                    android:id="@+id/proteinsPlainText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:text="@string/zero"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
                <EditText
                    android:id="@+id/carbohydratesPlainText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:text="@string/zero"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
                <EditText
                    android:id="@+id/fatsPlainText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:text="@string/zero"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
                <EditText
                    android:id="@+id/caloriesPlainText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:text="@string/zero"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>