<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TableLayout android:id="@+id/personLoginTable"
        android:layout_height="wrap_content" android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        tools:ignore="MissingConstraints">
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:id="@+id/nameTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/name"
                />
            <EditText
                android:id="@+id/namePlainText"
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:inputType="textPersonName"
                />
        </TableRow>

        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <TextView
                android:id="@+id/passwordTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/password"
                />
            <EditText
                android:id="@+id/passwordPlainText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="textPassword"
                />
        </TableRow>
        <TableRow android:layout_height="match_parent" android:layout_width="match_parent">
            <CheckBox
            android:id="@+id/checkBoxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember me"
                />
        </TableRow>



    </TableLayout>

    <Button
        android:id="@+id/LogButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personLoginTable" />

</androidx.constraintlayout.widget.ConstraintLayout>